{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 10,
  "lineage": "b416a673-c749-2587-38fd-f2ef95e26204",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:017899468342:instance/i-07bc1d2d6d8fe2553",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07bc1d2d6d8fe2553",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "makentosh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0acdb0532a6a82408",
            "private_dns": "ip-172-16-1-82.eu-central-1.compute.internal",
            "private_ip": "172.16.1.82",
            "public_ip": "3.126.240.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0273ea27fe762f15e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b05acdbe5cae1823",
            "tags": {
              "name": "nginx-load-balancer"
            },
            "tags_all": {
              "name": "nginx-load-balancer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e6538796619596a"
            ]
          },
          "dependencies": [
            "aws_security_group.sgr",
            "aws_subnet.subnet",
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:017899468342:instance/i-03594ddb9334a575c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03594ddb9334a575c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "makentosh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0988b77b3c480fe06",
            "private_dns": "ip-172-16-1-122.eu-central-1.compute.internal",
            "private_ip": "172.16.1.122",
            "public_ip": "54.93.124.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029177cefe8090bc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b05acdbe5cae1823",
            "tags": {
              "name": "nginx1"
            },
            "tags_all": {
              "name": "nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e6538796619596a"
            ]
          },
          "dependencies": [
            "aws_security_group.sgr",
            "aws_subnet.subnet",
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07df274a488ca9195",
            "arn": "arn:aws:ec2:eu-central-1:017899468342:instance/i-0d4752826dc32b4a5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4752826dc32b4a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "makentosh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02bf4b3a469ab3896",
            "private_dns": "ip-172-16-1-7.eu-central-1.compute.internal",
            "private_ip": "172.16.1.7",
            "public_ip": "18.196.186.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00fd681f692dfc7bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b05acdbe5cae1823",
            "tags": {
              "name": "nginx2"
            },
            "tags_all": {
              "name": "nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01e6538796619596a"
            ]
          },
          "dependencies": [
            "aws_security_group.sgr",
            "aws_subnet.subnet",
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:017899468342:internet-gateway/igw-0838a072fda2cbd45",
            "id": "igw-0838a072fda2cbd45",
            "owner_id": "017899468342",
            "tags": {
              "Name": "gateway-nginx"
            },
            "tags_all": {
              "Name": "gateway-nginx"
            },
            "vpc_id": "vpc-0a6003dfb251446b2"
          },
          "dependencies": [
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:017899468342:route-table/rtb-042cfeae093ef614a",
            "id": "rtb-042cfeae093ef614a",
            "owner_id": "017899468342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0838a072fda2cbd45",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table"
            },
            "tags_all": {
              "Name": "Route table"
            },
            "vpc_id": "vpc-0a6003dfb251446b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5efc0eeb8b2c092",
            "route_table_id": "rtb-042cfeae093ef614a",
            "subnet_id": "subnet-0b05acdbe5cae1823"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.route",
            "aws_subnet.subnet",
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:017899468342:security-group/sg-01e6538796619596a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e6538796619596a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "redis and nginx",
            "name_prefix": "",
            "owner_id": "017899468342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securitygroupfromnginx"
            },
            "tags_all": {
              "Name": "securitygroupfromnginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6003dfb251446b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:017899468342:subnet/subnet-0b05acdbe5cae1823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0b05acdbe5cae1823",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "017899468342",
            "tags": {
              "Name": "subnet",
              "cidr_block": "172.16.1.0/24"
            },
            "tags_all": {
              "Name": "subnet",
              "cidr_block": "172.16.1.0/24"
            },
            "vpc_id": "vpc-0a6003dfb251446b2"
          },
          "dependencies": [
            "aws_vpc.vpc-nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:017899468342:vpc/vpc-0a6003dfb251446b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-03463b7aa9448ec00",
            "default_route_table_id": "rtb-0398def76f4806dbc",
            "default_security_group_id": "sg-02ffec8537a5f46a7",
            "dhcp_options_id": "dopt-344a2f5e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6003dfb251446b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0398def76f4806dbc",
            "owner_id": "017899468342",
            "tags": {
              "CidrBlock": "172.16.1.0/24",
              "Name": "vpc-nginx"
            },
            "tags_all": {
              "CidrBlock": "172.16.1.0/24",
              "Name": "vpc-nginx"
            }
          }
        }
      ]
    }
  ]
}